.. This file should contain the changes for the last release only, which
   will be included on the package's page on pypi. All older entries are
   kept in HISTORY.txt

Changelog
=========

4.0b1 - Unreleased
------------------

- Changed the ``Add Plone site`` link in the ZMI to use the basic form. Too
  many regular users are still using the ZMI.
  [hannosch]

- Fix template errors in author_feedback_template.pt which prevented author
  feedback from being sent. Allow anonymous users to send email to authors.
  Closes http://dev.plone.org/plone/ticket/9730
  [esteele]

- Update prefs_user_details.cpt and prefs_user_memberships.cpt templates to
  fit the current styling of other configuration screens. 
  Closes http://dev.plone.org/plone/ticket/9660
  [esteele]

- Avoid leading spaces in the class attribute of the body element.
  Refs http://dev.plone.org/plone/ticket/9489.
  [dukebody]

- Removed explicit macros calls for related items from templates. 
  Closes http://dev.plone.org/plone/ticket/9985
  [spliter]

- Deprecated document_relateditems.pt template - we are using viewlet instead.
  Refs http://dev.plone.org/plone/ticket/9985
  [spliter]

- Introduced order of viewlets for plone.belowcontentbody viewlet manager.
  Refs http://dev.plone.org/plone/ticket/9985
  [spliter]

- No longer show the ``Send this`` action by default. This refs
  http://dev.plone.org/plone/ticket/8800.
  [hannosch]

- Adjust login overlay position and width. Closes
  http://dev.plone.org/plone/ticket/9869.
  [dukebody]

- Adjust wording for user group membership removal. This fixes
  http://dev.plone.org/plone/ticket/9961.
  [dukebody]

4.0a3 - 2009-12-21
------------------

- Updated statusmessages code to more modern API.
  [hannosch]

- Updated add-on configuration section. Clarified terminology to refer to
  de/activation and interpret product readme files as restructered text.
  [hannosch]

- Adjusted control panel and upgrade screens to show software instead of